--- a/views/accountLogin.hbs
+++ b/views/accountLogin.hbs
@@ -176,47 +176,12 @@
             </style>
 
 <!--Login Button-->
-        <button onclick="document.getElementById('id01').style.display='block'" id="loginButton">Login</button>
 
-        <div id="id01" class="modal">
-            
-        <form class="modal-content animate" action="/action_page.php" method="post">
-            <div class="imgcontainer">
-            <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-            </div>
-
-            <div class="container">
-                <label for="uname"><b>Username</b></label>
-                <input type="text" placeholder="Enter Username" name="uname" required>
-
-                <label for="psw"><b>Password</b></label>
-                <input type="password" placeholder="Enter Password" name="psw" required>
-                    
-                <button type="submit">Login</button>
-                <label>
-                    <input type="checkbox" checked="checked" name="remember"> Remember me
-                </label>
-            </div>
-
-            <div class="container" style="background-color:#f1f1f1">
-                <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-                <span class="psw">&nbsp Forgot <a href="#">password?</a></span>
-                <span class="psw"><a href="#">Create </a>an account?</span>
-            </div>
-            </form>
-            </div>
-
-            <script>
-            // Get the modal
-            var modal = document.getElementById('id01');
-
-            // When the user clicks anywhere outside of the modal, close it
-            window.onclick = function(event) {
-                if (event.target == modal) {
-                    modal.style.display = "none";
-                }
-            }
-            </script>
+        {{#if user}}
+        <a href="/login/logout"><button id="loginButton">Logout</button></a>
+        {{else}}
+        <a href="accountLogin"><button id="loginButton">Login</button></a>
+        {{/if}}
 
             <!--Middle Container for Genre-->
             <ul>
@@ -232,11 +197,22 @@
                     <a href="/"><div id="title"><i class="fas fa-video">  Jon Movies</i></div></a>
                 </div>
                 <div class=".col-sm">
-                    <form method="post" action="createAccount">
-                        <input type="text" id="user" placeholder="Username">
-                        <input type="text" id="password" placeholder="Password">
-                        <input type="submit" value="Submit User Credentials">
+
+                    {{#if user}}
+                    <h1 style="color: white; text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;">You are already logged in as <strong>{{user.username}}</strong></h1>
+                    {{else}}
+
+                    <form method="post" action="/login">
+                        <h1 style="color: white;">Log In</h1>
+                        <input type="text" name="username" placeholder="Username">
+                        <input type="password" name="password" placeholder="Password">
+                        <input type="submit" value="Login"> 
                     </form>
+                    <h1 style="color: white;">Create an account <a href="accountSignup">here</a></h1>
+                    {{#if error}}
+                    <h1 style="color: white;">Incorrect Username or Password</h1>
+                    {{/if}}
+                    {{/if}}
                 </div>
                 <div class=".col-sm"></div>
             </div>
