--- a/views/dramaJoker.hbs
+++ b/views/dramaJoker.hbs
@@ -22,11 +22,25 @@
             background-repeat: no-repeat;
         }
 
-        .active{
-            background-size: 50%;
-            color: black;
-            text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
-            font-weight: bolder;
+        #logoutText{
+            position: absolute;
+            color: white;
+            text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+            left: 17%;
+            top: 85%;
+        }
+
+        #ratingBox{
+            width: 100px;
+            position: absolute;
+            top: 61%;
+            left: 66%;
+        }
+
+        #submitRating{
+            position: absolute;
+            top: 61%;
+            left: 72%;
         }
 
         .checked {
@@ -41,6 +55,30 @@
             color: white;
             font-size: 72px;
             top: 75%;
+        }
+
+        #rate{
+            position: absolute;
+            color: white;
+            text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+            left: 40%;
+            top: 60%;
+        }
+
+        #account{
+            position: absolute;
+            left: 45%;
+            color: white;
+            text-shadow: -3px 0 black, 0 3px black, 3px 0 black, 0 -3px black;
+            top: 3%;
+
+        }
+
+        .active{
+            background-size: 50%;
+            color: black;
+            text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+            font-weight: bolder;
         }
 
         .movie{
@@ -64,14 +102,6 @@
             text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
             left: 40%;
             top: 30%;
-        }
-
-        #rate{
-            position: absolute;
-            color: white;
-            text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
-            left: 40%;
-            top: 60%;
         }
 
         #title{
@@ -230,48 +260,12 @@
             </style>
 
 <!--Login Button-->
-        <button onclick="document.getElementById('id01').style.display='block'" id="loginButton">Login</button>
-
-        <div id="id01" class="modal">
-            
-        <form class="modal-content animate" action="/action_page.php" method="post">
-            <div class="imgcontainer">
-            <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-            </div>
-
-            <div class="container">
-                <label for="uname"><b>Username</b></label>
-                <input type="text" placeholder="Enter Username" name="uname" required>
-
-                <label for="psw"><b>Password</b></label>
-                <input type="password" placeholder="Enter Password" name="psw" required>
-                    
-                <button type="submit">Login</button>
-                <label>
-                    <input type="checkbox" checked="checked" name="remember"> Remember me
-                </label>
-            </div>
-
-            <div class="container" style="background-color:#f1f1f1">
-                <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-                <span class="psw">&nbsp Forgot <a href="#">password?</a></span>
-                <span class="psw"><a href="#">Create </a>an account?</span>
-            </div>
-            </form>
-            </div>
-
-            <script>
-            // Get the modal
-            var modal = document.getElementById('id01');
-
-            // When the user clicks anywhere outside of the modal, close it
-            window.onclick = function(event) {
-                if (event.target == modal) {
-                    modal.style.display = "none";
-                }
-            }
-            </script>
-
+        {{#if user}}
+        <h1 id="account">You are logged in as {{user.username}}</h1>
+        <a href="/login/logout"><button id="loginButton">Logout</button></a>
+        {{else}}
+        <a href="accountLogin"><button id="loginButton">Login</button></a>
+        {{/if}}
             <!--Middle Container for Genre-->
             <ul>
                 <li><a href="action" >Action</a></li>
@@ -287,7 +281,7 @@
                 </div>
                 <div class=".col-sm"></div>
                 <div class=".col-sm"></div>
-            </div>
+            </div>            
 
             <!--Movie Covers-->
             <div class="container">
@@ -297,14 +291,51 @@
                     <h2 id="movieDesc">Forever alone in a crowd, failed comedian Arthur Fleck seeks connection as he walks the streets of Gotham City. Arthur wears two masks -- 
                         the one he paints for his day job as a clown, and the guise he projects in a futile attempt to feel like he's part of the world around him. Isolated, 
                         bullied and disregarded by society, Fleck begins a slow descent into madness as he transforms into the criminal mastermind known as the Joker.</h2>
-                    <h1 id="rate">Rate This Movie: </h1>
+                    {{#if user}}
+                    <h1 id="rate">Rate This Movie (out of 5): </h1>
+                    <form method="post" action="ratingJoker">
+                    <input type="number" name="ratingJoker" id="ratingBox" placeholder="Rating">
+                    <input type="submit" value="submit" id="submitRating">
+                    </form>
+                    <h2 id="logoutText">Note: Log Out to Save All Changes</h2>
+                    {{/if}}
+                    
+                    {{#if rateJoker1}}
+                    <span class="fa fa-star checked" style="position: absolute; left: 19%;"></span>
+                    <span class="fa fa-star unchecked" style="position: absolute; left: 23%;"></span>
+                    <span class="fa fa-star unchecked" style="position: absolute; left: 27%;"></span>
+                    <span class="fa fa-star unchecked" style="position: absolute; left: 31%;"></span>
+                    <span class="fa fa-star unchecked" style="position: absolute; left: 35%;"></span>
+                    {{/if}}
+                    {{#if rateJoker2}}
+                    <span class="fa fa-star checked" style="position: absolute; left: 19%;"></span>
+                    <span class="fa fa-star checked" style="position: absolute; left: 23%;"></span>
+                    <span class="fa fa-star unchecked" style="position: absolute; left: 27%;"></span>
+                    <span class="fa fa-star unchecked" style="position: absolute; left: 31%;"></span>
+                    <span class="fa fa-star unchecked" style="position: absolute; left: 35%;"></span>
+                    {{/if}}
+                    {{#if rateJoker3}}
                     <span class="fa fa-star checked" style="position: absolute; left: 19%;"></span>
                     <span class="fa fa-star checked" style="position: absolute; left: 23%;"></span>
                     <span class="fa fa-star checked" style="position: absolute; left: 27%;"></span>
                     <span class="fa fa-star unchecked" style="position: absolute; left: 31%;"></span>
                     <span class="fa fa-star unchecked" style="position: absolute; left: 35%;"></span>
+                    {{/if}}
+                    {{#if rateJoker4}}
+                    <span class="fa fa-star checked" style="position: absolute; left: 19%;"></span>
+                    <span class="fa fa-star checked" style="position: absolute; left: 23%;"></span>
+                    <span class="fa fa-star checked" style="position: absolute; left: 27%;"></span>
+                    <span class="fa fa-star checked" style="position: absolute; left: 31%;"></span>
+                    <span class="fa fa-star unchecked" style="position: absolute; left: 35%;"></span>
+                    {{/if}}
+                    {{#if rateJoker5}}
+                    <span class="fa fa-star checked" style="position: absolute; left: 19%;"></span>
+                    <span class="fa fa-star checked" style="position: absolute; left: 23%;"></span>
+                    <span class="fa fa-star checked" style="position: absolute; left: 27%;"></span>
+                    <span class="fa fa-star checked" style="position: absolute; left: 31%;"></span>
+                    <span class="fa fa-star checked" style="position: absolute; left: 35%;"></span>
+                    {{/if}}
                 </div>
             </div>
-
 </body>
 </html>
